<resources>
<<<<<<< HEAD
    <string name="app_name">Wild Buzz</string>
    <string name="profil_ic">Profil</string>
    <string name="ranking_ic">Classement</string>
    <string name="textViewTitleEDT">EAT, DRINK, TOGETHER</string>
    <string name="textViewConviviale">Quelle école sera la plus conviviale ?</string>
    <string name="textViewDescriptionEDT">Montre que ton école sait se rassembler autour des verres ou des repas pris ensemble. Upload les photos prises à ces occasions pour que ton école soit peut-être la première sur le podium du partage ! 1 photo = 1 point (nécessite un accès à ton appareil photo)</string>
    <string name="buttonParticipationEDT">Je participe à ce challenge !</string>
    <string name="textViewDefouloir">Wild Picasso</string>
    <string name="textViewtitle2">Laisse s\'exprimer l\'artiste en toi </string>
    <string name="textViewDescriptionDefouloir">De manière aléatoire s\'ouvrira une session de 30 secondes durant laquelle tu n\'auras qu\'un objectif : traduire en un dessin le mot qui apparaitra sur ton écran. Les 3 "artistes" qui auront réalisé les dessins les mieux notés par les élèves de la Wild Code School feront gagner des points à leur école. Prêt ?</string>
    <string name="Welcome">Bienvenue sur Wild Buzz</string>
    <string name="signup">Inscris toi dès maintenant !</string>
    <string name="signup_email">Ton e-mail</string>
    <string name="signup_password">Ton mot de passe</string>
    <string name="validate">Valider</string>
    <string name="already_registered">Déja inscrit ? C\'est par ici !</string>
=======
    <string name="app_name">WildBuzz</string>
>>>>>>> c5f45c680b0ab0906f542b3c20a27ebd4d421d92
    <string name="buttonLoginMainActivity">Login</string>
    <string name="buttonInscriptionMainActivity">INSCRIPTION</string>
    <string name="signInButtonCreateActivity">Sign in with gmail</string>
    <string name="textViewChooseSchool">Choisis ton école</string>
    <string name="RadioButtonLaLoupe">La Loupe</string>
    <string name="RadioButtonOrlean">Orléan</string>
    <string name="RadioButtonLyon">Lyon</string>
    <string name="RadioButtonFontainebleau">Fontainebleau</string>
    <string name="RadioButtonBordeaux">Bordeaux</string>
    <string name="RadioButtonToulouse">Toulouse</string>
    <string name="ChoisiTonEcole">Choisis ton école ...</string>
    <string name="buttonCompte">Compte</string>
    <string name="textViewEmailUser">e-mail</string>
    <string name="EmailUser">e-mail</string>
    <string name="PasswordUser">Password</string>
    <string name="buttonRegister">Register</string>
    <string name="textViewSignIn">Signin</string>
    <string name="textViewEmailLogin">e-mail</string>
    <string name="textViewPasswordLogin">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonInscription">Inscription</string>
    <string name="buttonMenu">Menu</string>
    <string name="liste">Liste</string>
<<<<<<< HEAD
    <string name="textlist">Choisis un défi</string>
    <string name="buttonParticipationWalk">Je participe à ce challenge</string>
    <string name="textViewDescriptionWalk">Montre que ton école n"'"est pas statique et sait se bouger! En faisant le plus de pas possibles, mets toutes les chances de ton coté pour atteindre les sommets</string>
    <string name="walk_on_the_wild">WALK ON THE WILD</string>
    <string name="textViewTitreWalk">Quelle sera l"'"école la plus mobile?</string>
    <string name="ranking">Classement des écoles</string>
    <string name="start_new">New</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="letsgo">C\'est parti !</string>
    <string name="drawresult">Poster mon chef d\'oeuvre !</string>
    <string name="back">Retour</string>
    <string name="tolist">Commencer les défis</string>
    <string name="disconnect">Me déconnecter</string>
    <string name="title_activity_asupprimer">Asupprimer</string>


=======
    <string name="textViewTitreWalk">Quelle sera l"'"école la plus mobile?</string>
    <string name="textViewDescriptionWalk">Montre que ton école n"'"est pas statique et sait se bouger! En faisant le plus de pas possibles, mets toutes les chances de ton coté pour atteindre les sommets</string>
    <string name="buttonParticipationWalk">Je participe à ce challenge</string>
    <string name="walk_on_the_wild">WALK ON THE WILD SIDE</string>
>>>>>>> c5f45c680b0ab0906f542b3c20a27ebd4d421d92
</resources>
