<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="fr.wcs.wildbuzz.ChallengeA">


    <Button
        android:id="@+id/buttonParticipationDefouloir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/vertWCS"
        android:padding="10dp"
        android:text="@string/buttonParticipationEDT" />

    <TextView
        android:id="@+id/textViewEDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/textViewDefouloir"
        android:textSize="32sp"
        android:textColor="@color/grisWCS"/>

    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewtitle2"
        android:textSize="20sp"
        android:textColor="@color/grisWCS"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/textViewDescriptionEDT"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewDescriptionEDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDescriptionDefouloir"
        android:textSize="12sp"
        android:textColor="@color/grisWCS"
        android:layout_above="@+id/buttonParticipationDefouloir"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/defouloir"
        android:layout_above="@+id/textViewDescriptionEDT"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp" />

</RelativeLayout>
