<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:text="@string/signup_email" />

    <TextView
        android:id="@+id/textViewPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPasswordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/signup_password" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextPasswordLogin"
        android:layout_alignRight="@+id/editTextPasswordLogin"
        android:layout_below="@+id/textViewEmailLogin"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPasswordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:background="@color/vertWCS"
        android:text="@string/validate"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textViewPasswordLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@color/orangeWCS"
        android:padding="10dp"
        android:text="@string/buttonInscription"
        android:textColor="@android:color/white" />

</RelativeLayout>