<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailUser"
        android:layout_above="@+id/editTextEmailUser"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PasswordUser"
        android:layout_above="@+id/editTextPasswordUser"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editTextPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/editTextPasswordUser"
        android:layout_alignLeft="@+id/editTextPasswordUser"
        android:layout_alignStart="@+id/editTextPasswordUser"
        android:layout_marginBottom="45dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:background="@color/vertWCS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
<<<<<<< HEAD
        android:text="@string/validate"
        android:layout_above="@+id/textViewSignin"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/textViewSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonRegister"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@color/orangeWCS"
        android:padding="10dp"
        android:text="@string/back"
        android:textColor="@android:color/white" />

=======
        android:text="@string/buttonRegister"
        android:layout_above="@+id/textViewSignin"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/textViewSignIn"
        android:id="@+id/textViewSignin"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="29dp"
        android:layout_toLeftOf="@+id/editTextEmailUser"
        android:layout_toStartOf="@+id/editTextEmailUser">

        <RadioButton
            android:id="@+id/radioButtonLaLoupe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="La Loupe" />

        <RadioButton
            android:id="@+id/radioButtonLyon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="RadioButtonLyon" />

        <RadioButton
            android:id="@+id/radioButtonBordeaux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Bordeaux" />

        <RadioButton
            android:id="@+id/radioButtonOrlean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Orlean" />

        <RadioButton
            android:id="@+id/radioButtonFontainebleau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Fontainebleau" />

        <RadioButton
            android:id="@+id/radioButtonToulouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Toulouse" />
    </RadioGroup>
>>>>>>> c5f45c680b0ab0906f542b3c20a27ebd4d421d92
</RelativeLayout>